Añadido submodulo de ClientCommunication
ClientCommunication es la dll necesaria para la comunicacion del juego con el servidor de matchmaking

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Ranking-Update"]
 	path = Ranking-Update
 	url = https://github.com/HoracioStudios/Ranking-Update
+[submodule "ClientCommunication"]
+	path = ClientCommunication
+	url = https://github.com/HoracioStudios/ClientCommunication
